added CHOOSE YOUR DESTINATION SECTION

--- a/index.html
+++ b/index.html
@@ -88,10 +88,12 @@
                 <img src="./media/about.svg" alt="" width="500">
             </div>
         </div>
-        <!-- <div class="pl-3 side-border">
-            <h3 class="no-margin font-weight-bold">About Us</h3>
-            <span>Explore varieties of places in the Philippines</span>
-        </div> -->
+        <section class="choose_your_destination">
+            <div class="pl-3 side-border">
+                <h3 class="no-margin font-weight-bold">Choose your destination</h3>
+                <span>Explore varieties of places in the Philippines</span>
+            </div>
+        </section>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="https://kit.fontawesome.com/23f8ce45d9.js" crossorigin="anonymous"></script>
