--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </p>
             </div>
             <div class="col-md">
-                <img src="./media/about.svg" alt="" width="500">
+                <img src="./media/about.svg" alt="" class="img-fluid">
             </div>
         </div>
         <section class="choose_your_destination">
