--- a/index.html
+++ b/index.html
@@ -93,6 +93,82 @@
                 <h3 class="no-margin font-weight-bold">Choose your destination</h3>
                 <span>Explore varieties of places in the Philippines</span>
             </div>
+            <div class="row mt-5">
+                <div class="col-md">
+                    <div class="card m-auto" style="width: 19rem;">
+                        <img class="card-img-top" src="media/coron.svg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Coron Palawan</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's
+                                content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card m-auto" style="width: 19rem;">
+                        <img class="card-img-top" src="media/chocolatehills.svg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Chocolate Hills</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's
+                                content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card m-auto" style="width: 19rem;">
+                        <img class="card-img-top" src="media/kawasan.svg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Kawasan Falls</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's
+                                content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-md">
+                    <div class="card m-auto" style="width: 19rem;">
+                        <img class="card-img-top" src="media/boracay.svg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Boracay Island</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's
+                                content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card m-auto" style="width: 19rem;">
+                        <img class="card-img-top" src="media/enchanted.svg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Enchanted River</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's
+                                content.</p>
+                            <a href="#" class="">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card m-auto" style="width: 19rem;">
+                        <img class="card-img-top" src="media/underground.svg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Underground River</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's
+                                content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
