added cards with no responsive on the card section

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's
                                 content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-primary">Learn more</a>
                         </div>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's
                                 content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-primary">Learn more</a>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's
                                 content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-primary">Learn more</a>
                         </div>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's
                                 content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-primary">Learn more</a>
                         </div>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's
                                 content.</p>
-                            <a href="#" class="">Learn More</a>
+                            <a href="#" class="btn btn-primary">Learn more</a>
                         </div>
                     </div>
                 </div>
@@ -164,7 +164,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's
                                 content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-primary">Learn more</a>
                         </div>
                     </div>
                 </div>
