completed travel section

--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's
                                 content.</p>
-                            <a href="#" class="btn btn-primary">Learn more</a>
+                            <hr>
+                            <div class="text-center">
+                                <a href="#" class="text-green">Learn more</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -114,7 +117,10 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's
                                 content.</p>
-                            <a href="#" class="btn btn-primary">Learn more</a>
+                            <hr>
+                            <div class="text-center">
+                                <a href="#" class="text-green">Learn more</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -126,7 +132,10 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's
                                 content.</p>
-                            <a href="#" class="btn btn-primary">Learn more</a>
+                            <hr>
+                            <div class="text-center">
+                                <a href="#" class="text-green">Learn more</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -140,7 +149,10 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's
                                 content.</p>
-                            <a href="#" class="btn btn-primary">Learn more</a>
+                            <hr>
+                            <div class="text-center">
+                                <a href="#" class="text-green">Learn more</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -152,7 +164,10 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's
                                 content.</p>
-                            <a href="#" class="btn btn-primary">Learn more</a>
+                            <hr>
+                            <div class="text-center">
+                                <a href="#" class="text-green">Learn more</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -164,9 +179,17 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's
                                 content.</p>
-                            <a href="#" class="btn btn-primary">Learn more</a>
+                            <hr>
+                            <div class="text-center">
+                                <a href="#" class="text-green">Learn more</a>
+                            </div>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="text-center py-5">
+                <div class="button1">
+                    <button class="button-b1"><span class="spa">Book Now</span></button>
                 </div>
             </div>
         </section>
