--- a/index.html
+++ b/index.html
@@ -194,6 +194,36 @@
             </div>
         </section>
     </div>
+    <section class="bg_gray default-text">
+        <div class="container">
+            <div class="feature_section text-center py-3">
+                <h3 class="no-margin no-padding font-weight-bold">Why we choose us.</h3>
+                <p class="no-margin no-padding">Bon Voyage offers you more secure and reliable services</p>
+                <!-- <span class="border-green"></span> -->
+                <hr class="border-green">
+            </div>
+            <div class="row text-center">
+                <div class="col-md px-5">
+                    <img src="media/icon_1.svg" alt="">
+                    <h5 class="pt-5 font-weight-bold">Expert Recommendations</h5>
+                    <p>Our guides aims at providing everything for travellers about a destination
+                        before they actually
+                        head out.</p>
+                </div>
+                <div class="col-md px-5">
+                    <img src="media/icon_2.svg" alt="">
+                    <h5 class="pt-5 font-weight-bold">Up to date</h5>
+                    <p>These guides give the traveller a well rounded idea of the type of destination they have chosen.
+                    </p>
+                </div>
+                <div class="col-md px-5">
+                    <img src="media/icon_3.svg" alt="">
+                    <h5 class="pt-5 font-weight-bold">Get Answers</h5>
+                    <p>Our team directly answers your question 24 / 7.</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="https://kit.fontawesome.com/23f8ce45d9.js" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
