--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                 <h3 class="no-margin font-weight-bold">Choose your destination</h3>
                 <span>Explore varieties of places in the Philippines</span>
             </div>
-            <div class="row mt-5">
-                <div class="col-md">
-                    <div class="card m-auto" style="width: 19rem;">
+            <div class="row mt-4">
+                <div class="col-lg">
+                    <div class="card m-auto mt-5" style="width: 19rem;">
                         <img class="card-img-top" src="media/coron.svg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Coron Palawan</h5>
@@ -109,8 +109,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md">
-                    <div class="card m-auto" style="width: 19rem;">
+                <div class="col-lg">
+                    <div class="card m-auto mt-5" style="width: 19rem;">
                         <img class="card-img-top" src="media/chocolatehills.svg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Chocolate Hills</h5>
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md">
+                <div class="col-lg">
                     <div class="card m-auto" style="width: 19rem;">
                         <img class="card-img-top" src="media/kawasan.svg" alt="Card image cap">
                         <div class="card-body">
@@ -141,8 +141,8 @@
                 </div>
             </div>
             <div class="row mt-4">
-                <div class="col-md">
-                    <div class="card m-auto" style="width: 19rem;">
+                <div class="col-lg">
+                    <div class="card m-auto mt-4" style="width: 19rem;">
                         <img class="card-img-top" src="media/boracay.svg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Boracay Island</h5>
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md">
+                <div class="col-lg">
                     <div class="card m-auto" style="width: 19rem;">
                         <img class="card-img-top" src="media/enchanted.svg" alt="Card image cap">
                         <div class="card-body">
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md">
+                <div class="col-lg">
                     <div class="card m-auto" style="width: 19rem;">
                         <img class="card-img-top" src="media/underground.svg" alt="Card image cap">
                         <div class="card-body">
@@ -203,20 +203,20 @@
                 <hr class="border-green">
             </div>
             <div class="row text-center">
-                <div class="col-md px-5">
+                <div class="col-md px-5 pt-3">
                     <img src="media/icon_1.svg" alt="">
                     <h5 class="pt-5 font-weight-bold">Expert Recommendations</h5>
                     <p>Our guides aims at providing everything for travellers about a destination
                         before they actually
                         head out.</p>
                 </div>
-                <div class="col-md px-5">
+                <div class="col-md px-5 pt-3">
                     <img src="media/icon_2.svg" alt="">
                     <h5 class="pt-5 font-weight-bold">Up to date</h5>
                     <p>These guides give the traveller a well rounded idea of the type of destination they have chosen.
                     </p>
                 </div>
-                <div class="col-md px-5">
+                <div class="col-md px-5 pt-3">
                     <img src="media/icon_3.svg" alt="">
                     <h5 class="pt-5 font-weight-bold">Get Answers</h5>
                     <p>Our team directly answers your question 24 / 7.</p>
