fix issues with responsive

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="row mt-4">
                 <div class="col-lg">
                     <div class="card m-auto mt-5" style="width: 19rem;">
-                        <img class="card-img-top" src="media/coron.svg" alt="Card image cap">
+                        <img class="card-img-top img-fluid" src="media/coron.svg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Coron Palawan</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
