--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </nav>
     <div class="parallax" id="Home">
         <div class="container parallax-content">
-            <div class="search-box">
+            <div class="search-box container-fluid">
                 <input class="input-search" type="text" placeholder="What are you looking for?">
                 <i class="fas fa-search search-btn"></i>
             </div>
@@ -203,20 +203,20 @@
                 <hr class="border-green">
             </div>
             <div class="row text-center">
-                <div class="col-md px-5 pt-3">
+                <div class="col-md px-5 pt-3 col_features">
                     <img src="media/icon_1.svg" alt="">
                     <h5 class="pt-5 font-weight-bold">Expert Recommendations</h5>
                     <p>Our guides aims at providing everything for travellers about a destination
                         before they actually
                         head out.</p>
                 </div>
-                <div class="col-md px-5 pt-3">
+                <div class="col-md px-5 pt-3 col_features">
                     <img src="media/icon_2.svg" alt="">
                     <h5 class="pt-5 font-weight-bold">Up to date</h5>
                     <p>These guides give the traveller a well rounded idea of the type of destination they have chosen.
                     </p>
                 </div>
-                <div class="col-md px-5 pt-3">
+                <div class="col-md px-5 pt-3 col_features">
                     <img src="media/icon_3.svg" alt="">
                     <h5 class="pt-5 font-weight-bold">Get Answers</h5>
                     <p>Our team directly answers your question 24 / 7.</p>
