added owl carousel

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/mobile.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.css">
 </head>
 
 <body>
@@ -224,7 +226,49 @@
             </div>
         </div>
     </section>
+    <section class="reviews">
+        <div class="container">
+            <div class="side-border pl-3">
+                <h3 class="no-margin font-weight-bold">What our clients says</h3>
+                <span>We strive for an excellent customer experience. Our biggest reward is to have satisfied clients
+                    share their experience
+                    with us.</span>
+            </div>
+        </div>
+        <div class="wrapper">
+            <div class="container">
+                <div class="owl-carousel owl-theme text-center">
+                    <div class="item"><img src="media/avatar1.png" alt="" width="100"><span
+                            class="px-5 font-weight-bold avatar_name">Anne</span>
+                        <p>We strive for an excellent customer experience. Our biggest reward is to have satisfied
+                            clients share their experience
+                            with us.</p>
+                    </div>
+                    <div class="item"><img src="media/avatar1.png" alt=""><span
+                            class="px-5 font-weight-bold avatar_name">Anne</span>
+                        <p>We strive for an excellent customer experience. Our biggest reward is to have satisfied
+                            clients share their experience
+                            with us.</p>
+                    </div>
+                    <div class="item"><img src="media/avatar1.png" alt=""><span
+                            class="px-5 font-weight-bold avatar_name">Anne</span>
+                        <p>We strive for an excellent customer experience. Our biggest reward is to have satisfied
+                            clients share their experience
+                            with us.</p>
+                    </div>
+                    <div class="item"><img src="media/avatar1.png" alt=""><span
+                            class="px-5 font-weight-bold avatar_name">Anne</span>
+                        <p>We strive for an excellent customer experience. Our biggest reward is to have satisfied
+                            clients share their experience
+                            with us.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/owl.js"></script>
     <script src="https://kit.fontawesome.com/23f8ce45d9.js" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
