added carousel with animation

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.css">
+    <link rel="stylesheet" href="css/animate.css">
 </head>
 
 <body>
@@ -277,6 +278,12 @@
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/scroller.js"></script>
+    <script>
+        $("#owl-example").owlCarousel({
+            nav: true,
+            navText: ["<img src='media/previous.svg'>", "<img src='media/next.svg'>"]
+        });
+    </script>
 </body>
 
 </html>
