sample commit from MAC

--- a/index.html
+++ b/index.html
@@ -247,15 +247,11 @@
                     </div>
                     <div class="item"><img src="media/avatar1.png" alt=""><span
                             class="px-5 font-weight-bold avatar_name">Anne</span>
-                        <p>We strive for an excellent customer experience. Our biggest reward is to have satisfied
-                            clients share their experience
-                            with us.</p>
+                        <p>This is a test!</p>
                     </div>
                     <div class="item"><img src="media/avatar1.png" alt=""><span
                             class="px-5 font-weight-bold avatar_name">Anne</span>
-                        <p>We strive for an excellent customer experience. Our biggest reward is to have satisfied
-                            clients share their experience
-                            with us.</p>
+                        <p>Sample Text!</p>
                     </div>
                     <div class="item"><img src="media/avatar1.png" alt=""><span
                             class="px-5 font-weight-bold avatar_name">Anne</span>
