--- a/index.html
+++ b/index.html
@@ -255,9 +255,7 @@
                     </div>
                     <div class="item"><img src="media/avatar1.png" alt=""><span
                             class="px-5 font-weight-bold avatar_name">Anne</span>
-                        <p>We strive for an excellent customer experience. Our biggest reward is to have satisfied
-                            clients share their experience
-                            with us.</p>
+                        <p>Last update!</p>
                     </div>
                 </div>
             </div>
