fix owl carousel

--- a/index.html
+++ b/index.html
@@ -247,7 +247,9 @@
                     </div>
                     <div class="item"><img src="media/avatar1.png" alt=""><span
                             class="px-5 font-weight-bold avatar_name">Anne</span>
-                        <p>This is a test!</p>
+                        <p>
+                            Highly recommended! Superb experience
+                            I was extremely satisfied with Travel Local. Mr. Dara, the owner, has proven to be very courteous and helpful from the very beginning, trying to organize at the best our trip to Camotes in the eight days available. The guides and drivers are very professional and friendly, the accomodations simply superb. I highly recommend it, Mr Dara will turn your trip into an unforgettable experience!</p>
                     </div>
                     <div class="item"><img src="media/avatar1.png" alt=""><span
                             class="px-5 font-weight-bold avatar_name">Anne</span>
@@ -259,6 +261,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="container">
+            
         </div>
     </section>
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
